Fix alignment of mobile menu items
Without this short-named items could wrap.

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -199,6 +199,9 @@
     .header .nav {
         max-height: 0;
     }
+    .header .nav li {
+        width: 100%;
+    }
     .header .menu-btn:checked ~ .nav {
         clear: both;
         text-align: center;
